--- a/pt St. Philips/styles.css
+++ b/pt St. Philips/styles.css
@@ -382,6 +382,7 @@ footer p {
 
 #services {
 	min-height: 675px;
+	margin-left: 12%;
 }
 
 #services li {
@@ -423,31 +424,273 @@ footer p {
 	text-align: center;
 }
 
-#history-header {
-	padding: 5% 0 1% 0;
-	font-weight: 400;
-	text-align: center;
-	font-size: 1050%;
-	margin-bottom: 9%;
-	color: white;
-	text-shadow: 2px 2px 4px #ff0000;
+#history-start {
+	padding-top: 2%;
 }
 
-#history-sub {
-	font-weight: bold;
+.history-header-green {
+	color: white;
+	border: 6px solid #F1F1F1;
+	background-color: #A3B95F;
+	box-shadow: 0px 0px 20px #888888;
+	padding-top: 1%;
+	padding-bottom: 1%;
+}
+
+.history-header {
 	text-align: center;
+	font-size: 300%;
+}
+
+.history-header-mission {
+	text-align: right;
+	font-size: 300%;
+	margin-right: 20%;
+}
+
+.history-top-sub {
 	width: 50%;
 	margin: auto;
+	text-align: center;
+	padding-bottom: 2%;
+	font-size: 150%;
+	padding-top: 2%;
 }
 
-#history-buttons {
-	width: 15%;
-	font-size: 225%; 
+.history-sub-right {
+	width: 50%;
+	margin: auto;
+	float: right;
+	font-size: 150%;
+	padding-top: 2%;
 }
 
-#history-button {
-	margin-top: 8%;
+.history-sub-left {
+	width: 50%;
+	margin: auto;
+	float: left;
+	font-size: 150%;
+	padding-top: 2%;
+}
+
+.history-altar-sub {
+	width: 46%;
+	margin-top: 2%;
+}
+
+.history-logo-sub {
+	width: 55%;
+}
+
+.hist-letter {
+	border: 1px solid black;
+	padding: 6px 6px 0px 6px;
+}
+
+#history-mission {
+	padding-top: 1%;
+	padding-bottom: 2%;
+}
+
+.history-img-1-div {
+	padding-bottom: 1%;
+}
+
+.history-img-1{
+	width: 40%;
+	float: left;
+	max-height: 50%; 
+	max-width: 50%; 
+	display: inline-block; 
+	border: 1em solid white; 
+	border-radius: 15px 50px 30px 50px;
+	box-shadow: 0px 0px 20px #888888;
+	margin-left: 5%;
+}
+
+.history-img-2{
+	width: 25%;
+	float: right;
+	max-height: 50%; 
+	max-width: 50%; 
+	display: inline-block; 
+	border: 1em solid white; 
+	border-radius: 50px 15px 50px 30px;
+	box-shadow: 0px 0px 20px #888888;
+	margin-right: 5%;
+	margin-top: 20%;
+}
+
+.history-img-3{
+	width: 40%;
+	float: right;
+	max-height: 50%; 
+	max-width: 50%; 
+	display: inline-block; 
+	border: 1em solid white; 
+	border-radius: 50px 15px 15px 30px;
+	box-shadow: 0px 0px 20px #888888;
+	margin-right: 5%;
+	margin-top: 46%;
+}
+
+.history-img-4{
+	width: 40%;
+	float: right;
+	max-height: 50%; 
+	max-width: 50%; 
+	display: inline-block; 
+	border: 1em solid white; 
+	border-radius: 50px 15px 15px 30px;
+	box-shadow: 0px 0px 20px #888888;
+	margin-right: 5%;
+	margin-top: 26%;
+}
+
+.history-img-4-sub{
+	float: right;
+	max-height: 50%; 
+	max-width: 50%; 
+	display: inline-block; 
+	margin-right: 15%;
+	text-align: center;
+	margin-top: 2%;
+	font-size: 100%;
+}
+
+.history-img-5{
+	width: 40%;
+	float: left;
+	max-height: 50%; 
+	max-width: 50%; 
+	display: inline-block; 
+	border: 1em solid white; 
+	border-radius: 50px 15px 15px 30px;
+	box-shadow: 0px 0px 20px #888888;
+	margin-right: 5%;
+	margin-top: 2%;
+}
+
+.history-img-5-sub{
+	float: right;
+	max-height: 50%; 
+	max-width: 50%; 
+	display: inline-block; 
+	margin-right: 16%;
+	text-align: center;
+	margin-top: 2%;
+	font-size: 100%;
+}
+
+.history-img-6{
+	width: 30%;
+	float: right;
+	max-height: 50%; 
+	max-width: 50%; 
+	display: inline-block; 
+	border: 1em solid white; 
+	border-radius: 50px 15px 15px 30px;
+	box-shadow: 0px 0px 20px #888888;
+	margin-right: 5%;
+	margin-top: 2%;
+}
+
+.history-img-6-sub{
+	float: right;
+	max-height: 50%; 
+	max-width: 50%; 
+	display: inline-block; 
+	margin-right: 9%;
+	text-align: center;
+	margin-top: 2%;
+	font-size: 100%;
+}
+
+.history-img-7{
+	width: 30%;
+	float: right;
+	display: inline-block; 
+	border: 1em solid white; 
+	border-radius: 50px 15px 15px 30px;
+	box-shadow: 0px 0px 20px #888888;
+	margin-right: 5%;
+	margin-top: 2%;
+}
+
+.history-img-7-sub{
+	float: right;
+	display: inline-block; 
+	margin-right: 5%;
+	text-align: center;
+	margin-top: 2%;
+	font-size: 100%;
+	width: 30%;
+}
+
+.history-img-8{
+	width: 30%;
+	float: left;
+	max-height: 50%; 
+	max-width: 50%; 
+	display: inline-block; 
+	border: 1em solid white; 
+	border-radius: 50px 15px 15px 30px;
+	box-shadow: 0px 0px 20px #888888;
+	margin-right: 5%;
+	margin-top: 2%;
+}
+
+.history-img-8-sub{
+	float: left; 
+	margin-right: 16%;
+	text-align: center;
+	font-size: 100%;
+}
+
+.history-img-9{
+	width: 38%;
+	float: left;
+	max-height: 50%; 
+	max-width: 50%; 
+	display: inline-block; 
+	border: 1em solid white; 
+	border-radius: 50px 15px 15px 30px;
+	box-shadow: 0px 0px 20px #888888;
+	margin-left: 6%;
+}
+
+.history-img-10{
+	width: 40%;
+	float: right;
+	display: inline-block; 
+	border: 1em solid white; 
+	border-radius: 50px 15px 15px 30px;
+	box-shadow: 0px 0px 20px #888888;
+	margin-right: 10%;
+
+}
+
+.history-img-11{
+	width: 40%;
+	float: right;
+	max-height: 50%; 
+	max-width: 50%; 
+	display: inline-block; 
+	border: 1em solid white; 
+	border-radius: 50px 15px 15px 30px;
+	box-shadow: 0px 0px 20px #888888;
+	margin-right: 5%;
+	margin-top: 14%;
+}
+
+.history-img {
+	width: 50%;
+	float: right;
+}
+
+.last-history {
 	margin-bottom: 4%;
+	margin-top: 4%;
 }
 
 
@@ -456,7 +699,7 @@ footer p {
 
 /* Giving */
 #giving-background {
-	background: url("placeholder.png");
+	background: url("giving-header.jpg");
 	background-position: center;
 	background-size: cover;
 	padding-bottom: 12.5%;
@@ -465,6 +708,7 @@ footer p {
 .giving {
 	margin: auto;
 	text-align: center;
+	color: white;
 }
 
 #giving-header {
@@ -500,6 +744,52 @@ footer p {
 
 
 /* Treasure */
+
+#circle-1 {
+	width: 200px;
+	height: 200px;
+	background: red;
+	margin: auto;
+	-moz-border-radius: 100px;
+	-webkit-border-radius: 100px;
+	border-radius: 100px;
+	background-image: url("monatary.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    border: 4px solid gray;
+}
+
+#circle-2 {
+	width: 200px;
+	height: 200px;
+	background: red;
+	margin: auto;
+	-moz-border-radius: 100px;
+	-webkit-border-radius: 100px;
+	border-radius: 100px;
+	background-image: url("donation.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    border: 4px solid gray;
+}
+
+#circle-3 {
+	width: 200px;
+	height: 200px;
+	background: red;
+	margin: auto;
+	-moz-border-radius: 100px;
+	-webkit-border-radius: 100px;
+	border-radius: 100px;
+	background-image: url("tree-of-life.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    border: 4px solid gray;
+}
+
 #treasure-background {
 	background: url("placeholder.png");
 	background-position: center;
@@ -511,6 +801,10 @@ footer p {
 	font-weight: 400;
 	text-align: center;
 	font-size: 550%;
+}
+
+.treasure-names {
+	padding-top: 4%;
 }
 
 .treasure-boxes {
@@ -635,6 +929,12 @@ footer p {
 	margin: 2% 2% 2% 2%;
 	display: inline-block;
 	width: 45%;
+	background-image: url("bap.jpg");
+	color: white;
+	text-shadow: 2px 2px 4px #000000;
+	background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
 }
 
 .baptisim-header {
