--- a/pt St. Philips/styles.css
+++ b/pt St. Philips/styles.css
@@ -71,6 +71,8 @@ header li {
 }
 
 header #branding {
+	font-family: Old English Text MT;
+	color: #BA2026;
 	float: left;
 }
 
@@ -83,9 +85,12 @@ header nav {
 	margin-top: 10px;
 }
 
+header #branding span .highlight{
+	color: #BA2026;
+}
+
 header .highlight, header .current a{
 	color: #FFFFFF;
-
 }
 
 header a:hover {
@@ -130,7 +135,6 @@ header a:hover {
 	width: 100%;
 	margin: auto;
 	text-align: center;
-	padding-bottom: 6%;
 	font-size: 1.75em;
 	padding-top: 4%;
 }
@@ -153,7 +157,7 @@ header a:hover {
 }
 
 #boxes .box span{
-	color: black; 
+	color: #BA2026; 
 	font-size: 200%; 
 	font-weight: bold; 
 	margin-right: 0.1em;
