--- a/pt St. Philips/styles.css
+++ b/pt St. Philips/styles.css
@@ -406,10 +406,11 @@ header a:hover {
 
 #newsletter {
 	background: #ACACAC;
-	margin: 5% 0 0 0;
 	text-align: center;
 	padding-bottom: 5%;
 	padding-top: 5%;
+	padding-left: 10%;
+
 }
 
 #footer-head i {
@@ -481,6 +482,34 @@ footer p {
 }
 
 #directions-img {
+	background-image: url("./pics/Celebration Blessings.jpg");
+	background-position: center;
+	background-size: cover;
+	width: 100%;
+}
+
+#garden-img {
+	background-image: url("./pics/Celebration Blessings.jpg");
+	background-position: center;
+	background-size: cover;
+	width: 100%;
+}
+
+#undercroft-img {
+	background-image: url("./pics/Celebration Blessings.jpg");
+	background-position: center;
+	background-size: cover;
+	width: 100%;
+}
+
+#nave-img {
+	background-image: url("./pics/Celebration Blessings.jpg");
+	background-position: center;
+	background-size: cover;
+	width: 100%;
+}
+
+#sanctuary-img {
 	background-image: url("./pics/Celebration Blessings.jpg");
 	background-position: center;
 	background-size: cover;
@@ -1428,7 +1457,7 @@ footer p {
     text-decoration: none;
 }
 
-.modal-1 {
+.modal-2 {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
@@ -1442,7 +1471,53 @@ footer p {
 }
 
 /* Modal Content/Box */
-.modal-content-1 {
+.modal-content-2 {
+	font-size: 150%;
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+.modal-3 {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content-3 {
+	font-size: 150%;
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+.modal-4 {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content-4 {
 	font-size: 150%;
     background-color: #fefefe;
     margin: 15% auto; /* 15% from the top and centered */
@@ -1458,4 +1533,16 @@ footer p {
     float: right;
     font-size: 28px;
     font-weight: bold;
+}
+
+#map {
+	width: 11%; 
+	height: 18%; 
+	background-color: #ACACAC; 
+	float: right; 
+	overflow: hidden; 
+	position: relative; 
+	right: 8vw; 
+	display: inline-block;
+	top: 4vw;
 }
