--- a/pt St. Philips/styles.css
+++ b/pt St. Philips/styles.css
@@ -503,14 +503,14 @@ footer p {
 }
 
 #nave-img {
-	background-image: url("./pics/Celebration Blessings.jpg");
+	background-image: url("./pics/nave.jpg");
 	background-position: center;
 	background-size: cover;
 	width: 100%;
 }
 
 #sanctuary-img {
-	background-image: url("./pics/Celebration Blessings.jpg");
+	background-image: url("./pics/sanct.jpg");
 	background-position: center;
 	background-size: cover;
 	width: 100%;
