--- a/pt St. Philips/styles.css
+++ b/pt St. Philips/styles.css
@@ -489,7 +489,7 @@ footer p {
 }
 
 #garden-img {
-	background-image: url("./pics/Celebration Blessings.jpg");
+	background-image: url("./pics/garden.jpg");
 	background-position: center;
 	background-size: cover;
 	width: 100%;
