--- a/pt St. Philips/styles.css
+++ b/pt St. Philips/styles.css
@@ -8,6 +8,17 @@ body{
 	background-color: #f4f4f4;
 }
 
+#top-bot-border {
+	border-bottom: 6px solid #737373;
+}
+
+#logo-main {
+	white-space:nowrap; 
+	float: left; 
+	position: relative; 
+	justify-content: end;
+}
+
 p {
 	font-family: 'Merriweather', sans-serif;
 }
@@ -569,13 +580,14 @@ footer p {
 
 .staff-name {
 	width: 90%; 
-	border: .15vw solid grey;
-	background-color: grey;
-	border: .15vw solid grey;
+	border-top: .15vw solid #a51e23;
+	background-color: #a51e23;
 	text-align: center; 
 	margin: auto; 
 	margin-bottom: 2%;
 	color: white;
+	overflow: hidden;
+    white-space: nowrap;
 }
 
 .staff-img-pg {
@@ -591,6 +603,8 @@ footer p {
 
 .staff-sub {
 	font-size: 150%; margin-top: 2%;
+	overflow: hidden;
+    white-space: nowrap;
 }
 
 .vestry-role-top {
@@ -616,11 +630,6 @@ footer p {
 .vestry-sub {
 	font-size: 150%;
 	margin: 0;
-}
-
-.fit {
-/*	margin-top: 12%;*/
-	padding-bottom: 1%;
 }
 
 .fit2 {
@@ -1233,7 +1242,6 @@ footer p {
 
 .baptisim-content p {
 	font-size: 150%;
-
 	margin: 0;
 	float: left;
 }
@@ -1258,7 +1266,7 @@ footer p {
 	text-shadow: 2px 2px 4px #000000;
 	background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
+    background-position: center;
     min-height: 75vh; 
     min-width: 45vw;
     max-height: 75vh; 
@@ -1274,6 +1282,7 @@ footer p {
 .confirmation-content p {
 	font-size: 150%;
 	margin: 0;
+	float: left;
 }
 
 #actual-c-button {
@@ -1569,4 +1578,8 @@ footer p {
 	border: 1em solid white; 
 	border-radius: 50px 50px 50px 50px;
 	box-shadow: 0px 0px 20px #888888;
+}
+
+.space {
+	margin: .5%;
 }
