--- a/pt St. Philips/styles.css
+++ b/pt St. Philips/styles.css
@@ -153,10 +153,14 @@ header a:hover {
 }
 
 .mission-sub-border {
+	width: initial;
 	font-weight: bold; 
-	font-size: 150%; 
-	border: 2px solid black; 
+	font-size: 125%; 
+	border: 6px solid white; 
 	padding-top: 1%;
+	color: white;
+	background-color: #A41E23;
+	box-shadow: 0px 0px 20px #888888;
 }
 
 /* mission end*/
@@ -992,6 +996,8 @@ footer p {
 #actual-button {
 	width: 15%;
 	font-size: 225%;
+	background-color: #A41E23;
+	border: none;
 }
 
 
