--- a/pt St. Philips/styles.css
+++ b/pt St. Philips/styles.css
@@ -1596,6 +1596,15 @@ footer p {
     width: 60%;
 }
 
+.history-img-12 {
+	width: 30%;
+	float: left;
+	max-height: 50%; 
+	max-width: 50%; 
+	display: inline-block; 
+	margin-right: 5%;
+	margin-top: 6%;
+}
 
 
 
@@ -1751,15 +1760,11 @@ footer p {
         
     }
 }
-.history-img-12 {
-	width: 30%;
-	float: left;
-	max-height: 50%; 
-	max-width: 50%; 
-	display: inline-block; 
-	border: 1em solid white; 
-	border-radius: 50px 15px 15px 30px;
-	box-shadow: 0px 0px 20px #888888;
-	margin-right: 5%;
-	margin-top: 6%;
+
+@media (max-width: 320px) {
+    nav a {
+    padding-left: 70px;
+    font-size: 150%;
+    display: inline-block;
+    }
 }
