--- a/pt St. Philips/styles.css
+++ b/pt St. Philips/styles.css
@@ -8,7 +8,7 @@ body{
 	background-color: #f4f4f4;
 }
 
-#top-bot-border {
+#border {
 	border-bottom: 6px solid #737373;
 }
 
@@ -1610,9 +1610,9 @@ footer p {
 
 
 
-@media (max-width: 768px) {
+@media (max-width: 769px) {
     nav a {
-    padding-left: 130px;
+    padding-left: 180px;
     font-size: 200%;
     display: inline-block;
     }
@@ -1679,6 +1679,10 @@ footer p {
     
     .pic-border {
         border: .3em solid white;
+    }
+    
+    #giving-header {
+        font-size: 800%;    
     }
 }
 
@@ -1759,6 +1763,11 @@ footer p {
         width: inherit;
         
     }
+    
+    #giving-header {
+        font-size: 500%;    
+    }
+    
 }
 
 @media (max-width: 320px) {
@@ -1767,4 +1776,58 @@ footer p {
     font-size: 150%;
     display: inline-block;
     }
+    
+    #giving-header {
+        font-size: 400%;    
+    }
+    
+    #treasure-header {
+        font-size: 340%;    
+    }
+    
+    #time-header {
+        font-size: 240%;    
+    }
+    
+    #talent-header {
+        font-size: 240%;    
+    }
+    
+    #steward-header {
+        font-size: 240%;    
+    }
+    
+    .volunteer-header {
+        font-size: 200%;    
+    }
+    
+    #actual-button {
+        font-size: inherit;
+    }
+    
+    .min-pic-warr {
+        float: left;
+        width: 250px;
+        height: 150px;
+        margin: auto;
+    }
+    
+    .min-pic-ecc {
+    width: 200px;
+    }
+    
+    .min-pic-aco {
+    display: inline-block;
+    float: right;
+    width: 200px;
+    height: auto;
+    }
+    
+    .min-pic-wom {
+    display: inline-block;
+    width: 200px;
+    height: auto;
+}
+#top-bot-border {
+    border-bottom: 6px solid #737373;
 }
