--- a/pt St. Philips/styles.css
+++ b/pt St. Philips/styles.css
@@ -1831,3 +1831,13 @@ footer p {
 #top-bot-border {
     border-bottom: 6px solid #737373;
 }
+
+.staff-role-lee {
+    margin: auto;
+    text-align: center;
+    float: right;
+    width: 100%;
+    padding-left: 50%:
+}
+
+
