--- a/pt St. Philips/styles.css
+++ b/pt St. Philips/styles.css
@@ -8,6 +8,10 @@ body{
 	background-color: #f4f4f4;
 }
 
+#top-bot-border {
+    border-bottom: 6px solid #737373;
+}
+
 #border {
 	border-bottom: 6px solid #737373;
 }
@@ -1598,17 +1602,36 @@ footer p {
 
 .history-img-12 {
 	width: 30%;
-	float: left;
-	max-height: 50%; 
-	max-width: 50%; 
-	display: inline-block; 
-	margin-right: 5%;
-	margin-top: 6%;
+    float: left;
+    max-height: 30%;
+    max-width: 30%;
+    display: inline-block;
+    border: 1em solid white;
+    text-align: center;
+    border-radius: 50px 15px 15px 30px;
+    box-shadow: 0px 0px 20px #888888;
+    margin-top: 6%;
 }
 
 
 
-
+@media (max-width: 1024px) {
+    #map {
+	width: 100%; 
+    margin: auto;
+    float: none;
+    position: inherit;
+    }
+    
+    #logo-main {
+    width: 16em;
+    height: auto;
+    }
+    
+    header a {
+    font-size: 1em;
+    }
+}
 
 @media (max-width: 769px) {
     nav a {
@@ -1628,13 +1651,6 @@ footer p {
     
     #newsletter {
     padding-left: 0;
-    }
-    
-    #map {
-	width: 100%; 
-    margin: auto;
-    float: none;
-    position: inherit;
     }
     
     #boxes .box img{
@@ -1828,9 +1844,7 @@ footer p {
     width: 200px;
     height: auto;
 }
-#top-bot-border {
-    border-bottom: 6px solid #737373;
-}
+
 
 .staff-role-lee {
     margin: auto;
