--- a/pt St. Philips/styles.css
+++ b/pt St. Philips/styles.css
@@ -716,7 +716,7 @@ footer p {
 	margin: auto;
 	float: right;
 /*	font-size: 150%;*/
-	padding-top: 12%;
+	padding-top: 6%;
 }
 
 .history-sub-right-0 {
@@ -724,7 +724,7 @@ footer p {
 	margin: auto;
 	float: right;
 /*	font-size: 150%;*/
-	padding-top: 20%;
+	padding-top: 9%;
 }
 
 .history-sub-right-1 {
@@ -732,7 +732,7 @@ footer p {
 	margin: auto;
 	float: right;
 /*	font-size: 150%;*/
-	padding-top: 32%;
+	padding-top: 8%;
 }
 
 .history-sub-left {
@@ -740,8 +740,8 @@ footer p {
 	margin: auto;
 	float: left;
 /*	font-size: 150%;*/
-	padding-top: 18%;
-    padding-bottom: 15%;
+	padding-top: 8%;
+    padding-bottom: 6%;
 }
 
 .history-sub-left-4 {
@@ -749,7 +749,7 @@ footer p {
 	margin: auto;
 	float: left;
 /*	font-size: 150%;*/
-	padding-top: 2%;
+	padding-top: 4%;
     padding-bottom: 2%;
 }
 
@@ -808,7 +808,7 @@ footer p {
 }
 
 .history-img-2{
-	width: 30%;
+	width: 28%;
 	float: right;
 	max-height: 50%; 
 	max-width: 50%; 
@@ -817,6 +817,7 @@ footer p {
 	border-radius: 50px 15px 50px 30px;
 	box-shadow: 0px 0px 20px #888888;
 	margin-right: 5%;
+    margin-top: 4%;
 /*	margin-top: 20%;*/
 }
 
@@ -834,7 +835,7 @@ footer p {
 }
 
 .history-img-4{
-	width: 30%;
+	width: 28%;
 	float: right;
 	max-height: 50%; 
 	max-width: 50%; 
@@ -858,7 +859,7 @@ footer p {
 }
 
 .history-img-5{
-	width: 30%;
+	width: 21%;
 	float: left;
 	max-height: 50%; 
 	max-width: 50%; 
@@ -882,7 +883,7 @@ footer p {
 }
 
 .history-img-6{
-	width: 30%;
+	width: 21%;
 	float: right;
 	max-height: 50%; 
 	max-width: 50%; 
@@ -906,7 +907,7 @@ footer p {
 }
 
 .history-img-7{
-	width: 30%;
+	width: 21%;
 	float: right;
 	display: inline-block; 
 	border: 1em solid white; 
@@ -919,16 +920,17 @@ footer p {
 .history-img-7-sub{
 	float: right;
 	display: inline-block; 
-	margin-right: 5%;
+/*	margin-right: 5%;*/
 	text-align: center;
 /*	margin-top: %;*/
-/*	font-size: 100%;*/
+	font-size: 70%;
 	width: 30%;
 	font-weight: bold;
+    margin-top: 1%;
 }
 
 .history-img-8{
-	width: 30%;
+	width: 21%;
 	float: left;
 	max-height: 50%; 
 	max-width: 50%; 
@@ -936,14 +938,16 @@ footer p {
 	border: 1em solid white; 
 	border-radius: 50px 15px 15px 30px;
 	box-shadow: 0px 0px 20px #888888;
-	margin-right: 5%;
+	margin-left: 2%;
+    margin-right: 4%;
 	margin-top: 6%;
 }
 
 .history-img-8-sub{
 	float: left; 
 	display: inline-block;
-	margin-left: 4%;
+	margin-left: 2%;
+	margin-right: 2%;
 	margin-top: 2%;
 	text-align: center;
 	font-size: 100%;
@@ -951,7 +955,7 @@ footer p {
 }
 
 .history-img-9{
-	width: 30%;
+	width: 21%;
 	float: left;
 	max-height: 30%; 
 	max-width: 30%; 
@@ -960,11 +964,13 @@ footer p {
 	text-align: center;
 	border-radius: 50px 15px 15px 30px;
 	box-shadow: 0px 0px 20px #888888;
-	margin-top: 6%;
+    margin-left: 2%;
+    margin-right: 2%;
+/*	margin-top: 11%;*/
 }
 
 .history-img-10{
-	width: 30%;
+	width: 21%;
 	max-height: 25%; 
 	max-width: 25%; 
 	float: right;
@@ -978,7 +984,7 @@ footer p {
 }
 
 .history-img-11{
-	width: 30%;
+	width: 21%;
 	float: right;
 	max-height: 25%; 
 	max-width: 25%; 
@@ -987,7 +993,7 @@ footer p {
 	border-radius: 50px 15px 15px 30px;
 	box-shadow: 0px 0px 20px #888888;
 	margin-right: 10%;
-	margin-top: 10%;
+	margin-top: 3%;
 }
 
 .history-img {
@@ -1647,7 +1653,7 @@ footer p {
 }
 
 .history-img-12 {
-	width: 30%;
+	width: 21%;
     float: left;
     max-height: 30%;
     max-width: 30%;
@@ -1657,6 +1663,7 @@ footer p {
     border-radius: 50px 15px 15px 30px;
     box-shadow: 0px 0px 20px #888888;
     margin-top: 6%;
+    margin-bottom: 6%;
 }
 
 
