--- a/pt St. Philips/styles.css
+++ b/pt St. Philips/styles.css
@@ -1544,6 +1544,31 @@ footer p {
 
 /* Modal */
 
+.modal-0 {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content-0 {
+	font-size: 150%;
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+    color: black;
+    text-decoration: none;
+}
+
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
