--- a/pt St. Philips/styles.css
+++ b/pt St. Philips/styles.css
@@ -429,7 +429,6 @@ header a:hover {
 	padding-bottom: 5%;
 	padding-top: 5%;
 	padding-left: 10%;
-
 }
 
 #footer-head i {
@@ -470,9 +469,13 @@ footer p {
 	/* contact portion */
 
 
+.joinus {
+	margin-left: 10vw;
+}
+
 #contact-line {
 	text-align: right;
-	width: 22%; 
+	width: 18%; 
 	height: 18%; 
 	background-color: #ACACAC; 
 	float: left; 
@@ -480,7 +483,7 @@ footer p {
 	position: relative; 
 	display: inline-block;
 	top: 9vw;
-	left: 8vw;
+	left: 4vw;
 	color: white;
 	background-color: #737373;
 	padding: 2px;
