--- a/pt St. Philips/styles.css
+++ b/pt St. Philips/styles.css
@@ -1681,7 +1681,7 @@ footer p {
 	display: inline-block;
 	width: 45%;
 	background-color: rgba(255,255,255,0.7);
-	background-image: url("./pics/confirmation.jpg");
+	background-image: url("./pics/confirmation3.jpg");
 	color: white;
 	text-shadow: 2px 2px 4px #000000;
 	background-repeat: no-repeat;
